--- a/style.css
+++ b/style.css
@@ -22,17 +22,17 @@ html,body{
   margin:50px;
   padding:50px;
   display:flex;
-  font-size:1.4rem;
+  font-size:1.7vw;
   flex-direction:column;
   background:pink;
   min-height:70vh;
-  gap:20px;
+  gap:2.5vh;
   border:3px solid #957698;
 }
 
 h1,h2{
   font-family:Bebas Neue;
-  font-size:5rem;
+  font-size:6vw;
 }
 
 p{
@@ -42,9 +42,9 @@ p{
 
 .highlight {
   color: #a080a3;
-  text-shadow: 2px 2px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000,
-  -1px 1px 0 #000, 1px 1px 0 #000;
-  letter-spacing:0.03em;
+  text-shadow: 0.2vw 0.2vw 0 #000, -0.1vw -0.1vw 0 #000, 0.1vw -0.1vw 0 #000,
+  -0.1vw 0.1vw 0 #000, 0.1vw 0.1vw 0 #000;
+  letter-spacing:0.3vw;
 }
 
 #img-section{
@@ -61,7 +61,7 @@ p{
 }
 
 .special:hover{
-  font-size:6rem;
+  font-size:7vw;
 }
 
 #img-area{
@@ -92,38 +92,4 @@ h2{
   text-align:center;
 }
 
-@media (min-width:1500px){
-  h1{
-    font-size:7rem;
-  }
-  #text-area{
-    font-size:1.8rem;
-  }
-}
 
-@media (min-width:2000px){
-  h1{
-    font-size:8rem;
-  }
-  #text-area{
-    font-size:2.3rem;
-  }
-}
-
-@media (min-width:2500px){
-  h1{
-    font-size:9.5rem;
-  }
-  #text-area{
-    font-size:3.3rem;
-  }
-}
-
-@media (min-width:3000px){
-  h1{
-    font-size:15rem;
-  }
-  #text-area{
-    font-size:5.3rem;
-  }
-}
