--- a/style.css
+++ b/style.css
@@ -19,15 +19,15 @@ html,body{
 }
 
 #text-area{
-  margin:50px;
-  padding:50px;
+  margin:3%;
+  padding:3%;
   display:flex;
-  font-size:1.7vw;
+  font-size:3.4vh;
   flex-direction:column;
   background:pink;
   min-height:70vh;
   gap:2.5vh;
-  border:3px solid #957698;
+  border:0.5vh solid #957698;
 }
 
 h1,h2{
@@ -70,7 +70,7 @@ p{
 	grid-gap: 4rem;
 	margin-top: 50px;
 	width: 100%;
-	max-width: 1280px;
+	max-width: 100vh;
 	align-items: center;
 	justify-items: center;
 
@@ -78,8 +78,7 @@ p{
 img {
 	width: 100%;
 	height: auto;
-	max-width: 300px;
-	background-color: #ffc5eb;
+	max-width: 23vw;
 	border: 1px solid black;
 	transition: all .1s ease-out;
 }
